--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 p{
 	font-size:20px;
-	//font-weight:bold;
+	font-weight:bold;
 	text-align:center;
-	font-family:fantasy;
+	//font-family:fantasy;
 	background-color:#845BB3;
 }
 
